--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
     <string name="app_name">Knell</string>
-    <string name="choose_date">选择你的生日</string>
+    <string name="choose_date">点击选择你的生日</string>
     <string name="save_over">保存完毕</string>
+    <string name="year">年</string>
+    <string name="month">月</string>
+    <string name="week">周</string>
+    <string name="day">天</string>
+    <string name="hour">时</string>
+    <string name="minute">分</string>
 </resources>
