--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="day">天</string>
     <string name="hour">时</string>
     <string name="minute">分</string>
+    <string name="label_clear">Clear</string>
 </resources>
