--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="hour">时</string>
     <string name="minute">分</string>
     <string name="label_clear">Clear</string>
+    <string name="survived">You have already survived in this world</string>
 </resources>
